full_val_out.txt
  File "<string>", line 21
    print(f'[PASS] get_final_state: using_tiled={state.get(\
                                                          ^
SyntaxError: '(' was never closed
